tests/ui/const-generics/float-generic.full.stderr
error[E0741]: `f32` is forbidden as the type of a const generic parameter
  --> $DIR/float-generic.rs:7:17
   |
LL | fn foo<const F: f32>() {}
   |                 ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0741`.
